# twelve-janggi-env

./: README.md  board.py  env.py  game.py  piece.py  pyproject.toml  render.py  test_random.py
scripts/: test_random.py  train.py
twelve_janggi/: __init__.py  board.py  env.py  game.py  render.py
